--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ repositories {
 	mavenCentral()
 }
 
+bootRun {
+	if (project.hasProperty('appJvmArgs')) {
+		jvmArgs project.appJvmArgs.split('\\s+') // Split by space to get individual args
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.kafka:spring-kafka'
