--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,7 +8,7 @@ version: '3.8'
 services:
   dev-env:
     build:
-      dockerfile: Dockerfile.txt
+      dockerfile: Dockerfile.dev
     volumes:
       - .:/app
     networks:
