--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.3.0' // Changed to a stable GA version
+	id 'io.spring.dependency-management' version '1.1.5' // Aligned with Spring Boot 3.3.0
 	id 'com.google.protobuf' version "0.9.4"
 }
 
@@ -27,13 +27,22 @@ bootRun {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.kafka:spring-kafka'
-	// proto's required
-//	implementation files('/Users/sid/Projects/shared-protos/build/libs/protos-0.0.2.jar')
-	implementation "com.google.protobuf:protobuf-java:3.25.3"
-	implementation "com.google.protobuf:protobuf-java-util:3.25.3"
+	// Spring Boot Starters
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security' // Kept one instance
 
+	// Spring Kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+
+	// Protobuf
+	// implementation files('../Projects/shared-protos/build/libs/protos-0.0.2.jar') // Keep commented if not actively using this local jar
+	implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
+	implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
+
+	// SpringDoc OpenAPI (Swagger)
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0' // This version is generally fine for Spring Boot 3.x
+
+	// Test Dependencies
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testImplementation 'org.springframework.security:spring-security-test'
