Code for consumers and producers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
 spring.application.name=distributedqueue
 
-# Basic Springdoc OpenAPI UI Configuration
+# Basic Spring doc OpenAPI UI Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+
+## Boostrap server and database config is placed under hidden props file locally. Better approach to place them under a secure vault.
+
+# Kafka configurations
+kafka.topic.job-actions=job-actions
+kafka.topic.job-status-updates=job-status-updates
+
+# Postgres configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
