--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,17 @@ springdoc.swagger-ui.tryItOutEnabled=true
 ## Boostrap server and database config is placed under hidden props file locally. Better approach to place them under a secure vault.
 
 # Kafka configurations
+## If you are setting up remote dev container change this to kafka:9093 or use localhost:9092.
+spring.kafka.bootstrap-servers=localhost:9092
 kafka.topic.job-actions=job-actions
 kafka.topic.job-status-updates=job-status-updates
 
 # Postgres configuration
+#   If you are using the remote dev container change this to following docker port from running command below or keep it as localhost:5432.
+#   docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' distributedqueue-postgres-1
+spring.datasource.url=jdbc:postgresql://localhost:5432/distributed_queue_db
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
