--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security' // Kept one instance
 
+	// --- Data Persistence ---
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'    // For PostgreSQL with JPA/Hibernate
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // For Redis
+	runtimeOnly 'org.postgresql:postgresql'
+
 	// Spring Kafka
 	implementation 'org.springframework.kafka:spring-kafka'
 
