--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,13 @@ spring.kafka.bootstrap-servers=localhost:9092
 kafka.topic.job-actions=job-actions
 kafka.topic.job-status-updates=job-status-updates
 
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufSerializer
+
 # Postgres configuration
 #   If you are using the remote dev container change this to following docker port from running command below or keep it as localhost:5432.
 #   docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' distributedqueue-postgres-1
-spring.datasource.url=jdbc:postgresql://localhost:5432/distributed_queue_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/distributedqueue
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
