--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,11 @@ dependencies {
 	// --- Protobuf & Kafka Serialization ---
 	implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
 	implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
-//	implementation "io.confluent:kafka-protobuf-serializer:${confluentVersion}"
-
+	implementation('io.confluent:kafka-protobuf-serializer:7.6.0') {
+		exclude group: 'io.swagger.core.v3', module: 'swagger-annotations'
+	}
 	// --- Swagger / OpenAPI ---
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
 	// --- Developer Tools ---
 	compileOnly 'org.projectlombok:lombok'
