Refactoring code and adding some requirements todo.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,10 @@ springdoc.swagger-ui.tryItOutEnabled=true
 spring.kafka.bootstrap-servers=localhost:9092
 kafka.topic.job-actions=job-actions
 kafka.topic.job-status-updates=job-status-updates
+spring.kafka.properties.schema.registry.url=http://localhost:8081
 
 # Postgres configuration
-#   If you are using the remote dev container change this to following docker port from running command below or keep it as localhost:5432.
+#   If you are using the remote dev container change this to following docker port from running command below or else keep it as localhost:5432.
 #   docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' distributedqueue-postgres-1
 spring.datasource.url=jdbc:postgresql://localhost:5432/distributedqueue
 spring.datasource.username=user
